增加反馈 分类搜索

--- a/index.html
+++ b/index.html
@@ -9,26 +9,31 @@
     <link rel="stylesheet" href="styles.css"> <!-- 引入外部CSS文件 -->
 </head>
 
-
+<!--这里是顶部的登录栏-->
 <body>
 <div class="top-bar">
-    <!-- 这里放置用户登录信息和Logo -->
      <div class="logo">Logo</div>
     <!--<img src = "./images/logo1.jpg" alt="logo">-->
     <div class="user-info">用户登录信息</div>
 </div>
 
+<!--这里是左侧的导航栏-->
 <div class="container">
     <aside class="sidebar">
         <ul>
             <li><a href="#todo-list">ToDoList</a></li>
-            <li><a href="#academic-papers">学习资源</a></li>
-            <li><a href="#programming">编程学习</a></li>
+            <li><a href="#common-tools">常用工具</a></li>
+            <li><a href="#C/C++">C/C++</a></li>
+            <li><a href="#Java">Java</a></li>
+            <li><a href="#Python">Python</a></li>
+            <li><a href="#front">前端</a></li>
             <li><a href="#academic-social">学术社交</a></li>
+            <li><a href="#feedback">意见反馈</a></li>
             <li><a href="#friendship-backlinks">友情外链</a></li>
         </ul>
     </aside>
 
+    <!--这里是右边的正文部分-->
     <main>
         <!--搜索框区域-->
         <div class="search-box">
@@ -37,28 +42,85 @@
                 <button type="submit">搜索</button>
             </form>
         </div>
+
         <!-- ToDoList 区域 -->
         <section id="todo-list" class="section">
             <h2>ToDoList</h2>
         </section>
+
         <!-- 学习资源区域 -->
-        <section id="academic-papers" class="section">
-            <h2>学习资源</h2>
-            <p>在这里你可以搜寻找你所需要的学习资源。</p>
+        <section id="common-tools" class="section">
+            <h2>常用工具</h2>
+            <p>平常经常用到的工具</p>
         </section>
 
         <!-- 编程学习区域 -->
-        <section id="programming" class="section">
-            <h2>编程学习</h2>
+        <section id="C/C++" class="section">
+            <h2>C/C++</h2>
+            <!--一行-->
             <ul>
-                <!-- 菜鸟教程链接 -->
                 <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
                 <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
                 <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
                 <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
                 <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
-                <!-- 其他编程学习链接 -->
-                <!-- 添加更多的链接 -->
+            </ul>
+            <ul>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+            </ul>
+        </section>
+
+        <section id="Java" class="section">
+            <h2>Java</h2>
+            <!--一行-->
+            <ul>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+            </ul>
+            <ul>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+            </ul>
+        </section>
+
+        <section id="Python" class="section">
+            <h2>Python</h2>
+            <!--一行-->
+            <ul>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+            </ul>
+            <ul>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+            </ul>
+        </section>
+
+        <section id="front" class="section">
+            <h2>前端</h2>
+            <!--一行-->
+            <ul>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
+                <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
             </ul>
             <ul>
                 <li class="son"><a href="https://www.runoob.com/" target="_blank">菜鸟教程</a></li>
@@ -75,15 +137,34 @@
             <p>在这里你可以与其他学者交流、分享学术资源。</p>
         </section>
 
+        <!--意见反馈-->
+        <section id="feedback" class="section">
+            <h2>意见反馈</h2>
+            <form>
+                <div>
+                    <label for="back">请输入你的反馈</label>
+                    <br>
+                    <input type="text" id="back" value="" name="back">
+                </div>
+                <div>
+                    <input type="submit" value="提交">
+                </div>
+            </form>
+        </section>
+
+
         <!--友情外链-->
         <section id="friendship-backlinks" class="section">
             <h2>友情外链</h2>
-            <p>一些友情外部链接</p>
+                <ul>
+                    <li class="friend"><a href="https://www.baidu.com">百度</a> </li>
+                </ul>
         </section>
     </main>
 
 </div>
 
+<!--这里是底部栏目-->
 <footer>
     <p>&copy; 2023 傻狗庄李晨出去鹿观.</p>
 </footer>
