--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
     <main>
         <!--搜索框区域-->
         <div class="search-box">
-            <form onsubmit="performSearch(event)">
+<!--             <form onsubmit="performSearch(event)">
                 <input type="text" id="searchInput" placeholder="在百度上搜索">
                 <button type="submit">搜索</button>
+            </form> -->
+            <form action="https://www.baidu.com/s">
+                <input type="text" name="wd"/><input type="submit"  value="百度"/>
             </form>
         </div>
 
